--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "bin": {
     "crx-compiler": "compiler.js",
     "crx-keygen": "keygen.js",
-    "crx-tsc-init": "tsc_init.js"
+    "crx-tsc-init": "tsc_init.js",
+    "crx-tsconfig": "tsc_init.js"
   },
   "keywords": [
     "cli",
@@ -25,7 +26,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "tsc && npm link"
+    "pack": "tsc && npm pack"
   },
   "dependencies": {
     "archiver": "^7.0.1",
@@ -37,5 +38,6 @@
     "@types/argparse": "^2.0.17",
     "@types/node": "^25.0.10",
     "typescript": "^5.9.3"
-  }
+  },
+  "type": "module"
 }
